--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
     "Nodejs",
     "express"
   ],
-  "website": "https://animezia.com/",
-  "repository": "https://github.com/warlordsnet/zia-api",
+  "website": "http://animenato.rf.gd/",
+  "repository": "http://animenato.rf.gd/",
   "logo": "https://cdnzia.pages.dev/favicon.ico",
   "success_url": "/welcome"
 
